<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SignUp"
    tools:showIn="@layout/activity_sign_up">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="310dp"
                android:layout_height="207dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/access_control" />

            <EditText
                android:id="@+id/su_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/su_user"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/su_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/su_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/su_user"
                app:layout_constraintStart_toStartOf="@+id/su_user"
                app:layout_constraintTop_toBottomOf="@+id/su_user" />

            <EditText
                android:id="@+id/su_password2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/su_password2"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/su_password"
                app:layout_constraintStart_toStartOf="@+id/su_password"
                app:layout_constraintTop_toBottomOf="@+id/su_password" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/su_signup"
                app:layout_constraintEnd_toEndOf="@+id/su_password2"
                app:layout_constraintStart_toStartOf="@+id/su_password2"
                app:layout_constraintTop_toBottomOf="@+id/su_password2" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>